// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EventList renders correctly for attendees 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <RNCSafeAreaProvider
    onInsetsChange={[Function]}
    style={
      Array [
        Object {
          "flex": 1,
        },
        undefined,
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "backgroundColor": "rgb(242, 242, 242)",
            "flex": 1,
          },
          undefined,
        ]
      }
    >
      <View
        pointerEvents="box-none"
        style={
          Object {
            "zIndex": 1,
          }
        }
      >
        <View
          accessibilityElementsHidden={false}
          importantForAccessibility="auto"
          onLayout={[Function]}
          pointerEvents="box-none"
          style={null}
        >
          <View
            pointerEvents="box-none"
            style={
              Object {
                "bottom": 0,
                "left": 0,
                "opacity": 1,
                "position": "absolute",
                "right": 0,
                "top": 0,
                "zIndex": 0,
              }
            }
          >
            <View
              collapsable={false}
              nativeID="animatedComponent"
              style={
                Object {
                  "backgroundColor": "rgb(255, 255, 255)",
                  "borderBottomColor": "rgb(216, 216, 216)",
                  "flex": 1,
                  "shadowColor": "rgb(216, 216, 216)",
                  "shadowOffset": Object {
                    "height": 0.5,
                    "width": 0,
                  },
                  "shadowOpacity": 0.85,
                  "shadowRadius": 0,
                }
              }
            />
          </View>
          <View
            collapsable={false}
            nativeID="animatedComponent"
            pointerEvents="box-none"
            style={
              Object {
                "height": 44,
                "maxHeight": undefined,
                "minHeight": undefined,
                "opacity": undefined,
                "transform": undefined,
              }
            }
          >
            <View
              pointerEvents="none"
              style={
                Object {
                  "height": 0,
                }
              }
            />
            <View
              pointerEvents="box-none"
              style={
                Object {
                  "alignItems": "stretch",
                  "flex": 1,
                  "flexDirection": "row",
                }
              }
            >
              <View
                pointerEvents="box-none"
                style={
                  Object {
                    "alignItems": "flex-start",
                    "flexBasis": 0,
                    "flexGrow": 1,
                    "justifyContent": "center",
                    "marginStart": 0,
                    "opacity": 1,
                  }
                }
              />
              <View
                pointerEvents="box-none"
                style={
                  Object {
                    "justifyContent": "center",
                    "marginHorizontal": 16,
                    "maxWidth": 718,
                    "opacity": 1,
                  }
                }
              >
                <Text
                  accessibilityRole="header"
                  aria-level="1"
                  collapsable={false}
                  nativeID="animatedComponent"
                  numberOfLines={1}
                  onLayout={[Function]}
                  style={
                    Object {
                      "color": "rgb(28, 28, 30)",
                      "fontSize": 17,
                      "fontWeight": "600",
                    }
                  }
                >
                  MockScreen
                </Text>
              </View>
              <View
                pointerEvents="box-none"
                style={
                  Object {
                    "alignItems": "flex-end",
                    "flexBasis": 0,
                    "flexGrow": 1,
                    "justifyContent": "center",
                    "marginEnd": 0,
                    "opacity": 1,
                  }
                }
              />
            </View>
          </View>
        </View>
      </View>
      <RNSScreenContainer
        onLayout={[Function]}
        style={
          Object {
            "flex": 1,
          }
        }
      >
        <RNSScreen
          activityState={2}
          forwardedRef={[Function]}
          pointerEvents="box-none"
          style={
            Object {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        >
          <View
            collapsable={false}
            style={
              Object {
                "opacity": 1,
              }
            }
          />
          <View
            accessibilityElementsHidden={false}
            closing={false}
            gestureVelocityImpact={0.3}
            importantForAccessibility="auto"
            onClose={[Function]}
            onGestureBegin={[Function]}
            onGestureCanceled={[Function]}
            onGestureEnd={[Function]}
            onOpen={[Function]}
            onTransition={[Function]}
            pointerEvents="box-none"
            style={
              Array [
                Object {
                  "display": "flex",
                  "overflow": undefined,
                },
                Object {
                  "bottom": 0,
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                },
              ]
            }
            transitionSpec={
              Object {
                "close": Object {
                  "animation": "spring",
                  "config": Object {
                    "damping": 500,
                    "mass": 3,
                    "overshootClamping": true,
                    "restDisplacementThreshold": 10,
                    "restSpeedThreshold": 10,
                    "stiffness": 1000,
                  },
                },
                "open": Object {
                  "animation": "spring",
                  "config": Object {
                    "damping": 500,
                    "mass": 3,
                    "overshootClamping": true,
                    "restDisplacementThreshold": 10,
                    "restSpeedThreshold": 10,
                    "stiffness": 1000,
                  },
                },
              }
            }
          >
            <View
              collapsable={false}
              nativeID="animatedComponent"
              pointerEvents="box-none"
              style={
                Object {
                  "flex": 1,
                }
              }
            >
              <View
                collapsable={false}
                forwardedRef={[Function]}
                needsOffscreenAlphaCompositing={false}
                onGestureHandlerEvent={[Function]}
                onGestureHandlerStateChange={[Function]}
                style={
                  Object {
                    "flex": 1,
                    "transform": Array [
                      Object {
                        "translateX": 0,
                      },
                      Object {
                        "translateX": 0,
                      },
                    ],
                  }
                }
              >
                <View
                  style={
                    Array [
                      Object {
                        "flex": 1,
                        "overflow": "hidden",
                      },
                      Array [
                        Object {
                          "backgroundColor": "rgb(242, 242, 242)",
                        },
                        undefined,
                      ],
                    ]
                  }
                >
                  <View
                    style={
                      Object {
                        "flex": 1,
                        "flexDirection": "column-reverse",
                      }
                    }
                  >
                    <View
                      style={
                        Object {
                          "flex": 1,
                        }
                      }
                    >
                      <RCTScrollView
                        data={
                          Array [
                            Object {
                              "data": Array [
                                Object {
                                  "end": 1609542000,
                                  "eventType": "ELECTION",
                                  "id": "xdNMwtrRmq3r5a_pEPFV7k01dAYN2ihF6jkvST8v5o8=",
                                  "start": 1609455600,
                                },
                                Object {
                                  "end": 1609455600,
                                  "eventType": "MEETING",
                                  "id": "DUfBHDnXf0-9IRef_er_N_FRP6CE-N4Cls6QakkNiug=",
                                  "start": 1609455600,
                                },
                                Object {
                                  "end": 1620357600,
                                  "eventType": "ROLL_CALL",
                                  "id": "By0KY3p7Ppu7JCqyIy-_JTQWwS8uPB2yI4U9_NB7BPU=",
                                  "start": 1620255600,
                                },
                              ],
                              "title": "Past",
                            },
                            Object {
                              "data": Array [],
                              "title": "Present",
                            },
                            Object {
                              "data": Array [],
                              "title": "Future",
                            },
                          ]
                        }
                        getItem={[Function]}
                        getItemCount={[Function]}
                        keyExtractor={[Function]}
                        onContentSizeChange={[Function]}
                        onLayout={[Function]}
                        onMomentumScrollBegin={[Function]}
                        onMomentumScrollEnd={[Function]}
                        onScroll={[Function]}
                        onScrollBeginDrag={[Function]}
                        onScrollEndDrag={[Function]}
                        renderItem={[Function]}
                        scrollEventThrottle={50}
                        stickyHeaderIndices={
                          Array [
                            0,
                            5,
                            7,
                          ]
                        }
                      >
                        <View>
                          <View
                            onLayout={[Function]}
                            style={null}
                          >
                            <Text
                              style={
                                Object {
                                  "color": "black",
                                  "fontSize": 25,
                                  "fontWeight": "bold",
                                  "marginHorizontal": 10,
                                  "textAlign": "center",
                                }
                              }
                            >
                              Past
                            </Text>
                          </View>
                          <View
                            onLayout={[Function]}
                            style={null}
                          >
                            <View
                              style={
                                Array [
                                  Object {
                                    "borderRadius": 5,
                                    "borderWidth": 1,
                                    "marginBottom": 10,
                                    "marginHorizontal": 20,
                                    "paddingHorizontal": 10,
                                  },
                                  Object {
                                    "marginTop": 20,
                                  },
                                ]
                              }
                            >
                              <View>
                                <Text
                                  style={
                                    Object {
                                      "marginHorizontal": 10,
                                    }
                                  }
                                >
                                  Start: 
                                  <time
                                    dateTime="2020-12-31T23:00:00.000Z"
                                    title="2020-12-31 23:00"
                                  >
                                    1 year ago
                                  </time>
                                  

                                  End: 
                                  <time
                                    dateTime="2021-01-01T23:00:00.000Z"
                                    title="2021-01-01 23:00"
                                  >
                                    1 year ago
                                  </time>
                                </Text>
                              </View>
                              <View
                                data={
                                  Array [
                                    Object {
                                      "data": Array [
                                        "Ballot Option 1",
                                        "Ballot Option 2",
                                      ],
                                      "title": "Mock Question 1",
                                    },
                                    Object {
                                      "data": Array [
                                        "Ballot Option 1",
                                        "Ballot Option 2",
                                      ],
                                      "title": "Mock Question 2",
                                    },
                                  ]
                                }
                                getItem={[Function]}
                                getItemCount={[Function]}
                                keyExtractor={[Function]}
                                onContentSizeChange={[Function]}
                                onLayout={[Function]}
                                onMomentumScrollBegin={[Function]}
                                onMomentumScrollEnd={[Function]}
                                onScroll={[Function]}
                                onScrollBeginDrag={[Function]}
                                onScrollEndDrag={[Function]}
                                renderItem={[Function]}
                                scrollEventThrottle={50}
                                stickyHeaderIndices={
                                  Array [
                                    0,
                                    4,
                                  ]
                                }
                              >
                                <View
                                  onLayout={[Function]}
                                  style={null}
                                >
                                  <Text
                                    style={
                                      Object {
                                        "fontSize": 20,
                                        "marginHorizontal": 10,
                                        "textAlign": "center",
                                      }
                                    }
                                  >
                                    Mock Question 1
                                  </Text>
                                </View>
                                <View
                                  onLayout={[Function]}
                                  style={null}
                                >
                                  <Text
                                    style={
                                      Object {
                                        "fontSize": 16,
                                        "marginHorizontal": 20,
                                        "textAlign": "center",
                                      }
                                    }
                                  >
                                    • Ballot Option 1
                                  </Text>
                                </View>
                                <View
                                  onLayout={[Function]}
                                  style={null}
                                >
                                  <Text
                                    style={
                                      Object {
                                        "fontSize": 16,
                                        "marginHorizontal": 20,
                                        "textAlign": "center",
                                      }
                                    }
                                  >
                                    • Ballot Option 2
                                  </Text>
                                </View>
                                <View
                                  onLayout={[Function]}
                                  style={null}
                                />
                                <View
                                  onLayout={[Function]}
                                  style={null}
                                >
                                  <Text
                                    style={
                                      Object {
                                        "fontSize": 20,
                                        "marginHorizontal": 10,
                                        "textAlign": "center",
                                      }
                                    }
                                  >
                                    Mock Question 2
                                  </Text>
                                </View>
                                <View
                                  onLayout={[Function]}
                                  style={null}
                                >
                                  <Text
                                    style={
                                      Object {
                                        "fontSize": 16,
                                        "marginHorizontal": 20,
                                        "textAlign": "center",
                                      }
                                    }
                                  >
                                    • Ballot Option 1
                                  </Text>
                                </View>
                                <View
                                  onLayout={[Function]}
                                  style={null}
                                >
                                  <Text
                                    style={
                                      Object {
                                        "fontSize": 16,
                                        "marginHorizontal": 20,
                                        "textAlign": "center",
                                      }
                                    }
                                  >
                                    • Ballot Option 2
                                  </Text>
                                </View>
                                <View
                                  onLayout={[Function]}
                                  style={null}
                                />
                              </View>
                            </View>
                          </View>
                          <View
                            onLayout={[Function]}
                            style={null}
                          >
                            <View
                              style={
                                Array [
                                  Object {
                                    "borderRadius": 5,
                                    "borderWidth": 1,
                                    "marginBottom": 10,
                                    "marginHorizontal": 20,
                                    "paddingHorizontal": 10,
                                  },
                                  Object {
                                    "marginTop": 20,
                                  },
                                ]
                              }
                            >
                              <View>
                                <Text
                                  style={
                                    Object {
                                      "marginHorizontal": 10,
                                    }
                                  }
                                >
                                  Start: 
                                  <time
                                    dateTime="2020-12-31T23:00:00.000Z"
                                    title="2020-12-31 23:00"
                                  >
                                    1 year ago
                                  </time>
                                </Text>
                              </View>
                              <View>
                                <Text
                                  style={
                                    Object {
                                      "marginHorizontal": 10,
                                    }
                                  }
                                >
                                  End: 
                                  <time
                                    dateTime="2020-12-31T23:00:00.000Z"
                                    title="2020-12-31 23:00"
                                  >
                                    1 year ago
                                  </time>
                                </Text>
                              </View>
                              <Text
                                style={
                                  Object {
                                    "marginHorizontal": 10,
                                  }
                                }
                              >
                                on earth
                              </Text>
                            </View>
                          </View>
                          <View
                            onLayout={[Function]}
                            style={null}
                          >
                            <View
                              style={
                                Array [
                                  Object {
                                    "borderRadius": 5,
                                    "borderWidth": 1,
                                    "marginBottom": 10,
                                    "marginHorizontal": 20,
                                    "paddingHorizontal": 10,
                                  },
                                  Object {
                                    "marginTop": 20,
                                  },
                                ]
                              }
                            >
                              <Text>
                                Roll Call
                              </Text>
                              <Text>
                                Not Open yet
                              </Text>
                              <Text>
                                Be sure to have set up your Wallet
                              </Text>
                            </View>
                          </View>
                          <View
                            onLayout={[Function]}
                            style={null}
                          />
                          <View
                            onLayout={[Function]}
                            style={null}
                          >
                            <Text
                              style={
                                Object {
                                  "color": "black",
                                  "fontSize": 25,
                                  "fontWeight": "bold",
                                  "marginHorizontal": 10,
                                  "textAlign": "center",
                                }
                              }
                            >
                              Present
                            </Text>
                          </View>
                          <View
                            onLayout={[Function]}
                            style={null}
                          />
                          <View
                            onLayout={[Function]}
                            style={null}
                          >
                            <Text
                              style={
                                Object {
                                  "color": "black",
                                  "fontSize": 25,
                                  "fontWeight": "bold",
                                  "marginHorizontal": 10,
                                  "textAlign": "center",
                                }
                              }
                            >
                              Future
                            </Text>
                          </View>
                          <View
                            onLayout={[Function]}
                            style={null}
                          />
                        </View>
                      </RCTScrollView>
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </RNSScreen>
      </RNSScreenContainer>
    </View>
  </RNCSafeAreaProvider>
</View>
`;

exports[`EventList renders correctly for organizers 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <RNCSafeAreaProvider
    onInsetsChange={[Function]}
    style={
      Array [
        Object {
          "flex": 1,
        },
        undefined,
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "backgroundColor": "rgb(242, 242, 242)",
            "flex": 1,
          },
          undefined,
        ]
      }
    >
      <View
        pointerEvents="box-none"
        style={
          Object {
            "zIndex": 1,
          }
        }
      >
        <View
          accessibilityElementsHidden={false}
          importantForAccessibility="auto"
          onLayout={[Function]}
          pointerEvents="box-none"
          style={null}
        >
          <View
            pointerEvents="box-none"
            style={
              Object {
                "bottom": 0,
                "left": 0,
                "opacity": 1,
                "position": "absolute",
                "right": 0,
                "top": 0,
                "zIndex": 0,
              }
            }
          >
            <View
              collapsable={false}
              nativeID="animatedComponent"
              style={
                Object {
                  "backgroundColor": "rgb(255, 255, 255)",
                  "borderBottomColor": "rgb(216, 216, 216)",
                  "flex": 1,
                  "shadowColor": "rgb(216, 216, 216)",
                  "shadowOffset": Object {
                    "height": 0.5,
                    "width": 0,
                  },
                  "shadowOpacity": 0.85,
                  "shadowRadius": 0,
                }
              }
            />
          </View>
          <View
            collapsable={false}
            nativeID="animatedComponent"
            pointerEvents="box-none"
            style={
              Object {
                "height": 44,
                "maxHeight": undefined,
                "minHeight": undefined,
                "opacity": undefined,
                "transform": undefined,
              }
            }
          >
            <View
              pointerEvents="none"
              style={
                Object {
                  "height": 0,
                }
              }
            />
            <View
              pointerEvents="box-none"
              style={
                Object {
                  "alignItems": "stretch",
                  "flex": 1,
                  "flexDirection": "row",
                }
              }
            >
              <View
                pointerEvents="box-none"
                style={
                  Object {
                    "alignItems": "flex-start",
                    "flexBasis": 0,
                    "flexGrow": 1,
                    "justifyContent": "center",
                    "marginStart": 0,
                    "opacity": 1,
                  }
                }
              />
              <View
                pointerEvents="box-none"
                style={
                  Object {
                    "justifyContent": "center",
                    "marginHorizontal": 16,
                    "maxWidth": 718,
                    "opacity": 1,
                  }
                }
              >
                <Text
                  accessibilityRole="header"
                  aria-level="1"
                  collapsable={false}
                  nativeID="animatedComponent"
                  numberOfLines={1}
                  onLayout={[Function]}
                  style={
                    Object {
                      "color": "rgb(28, 28, 30)",
                      "fontSize": 17,
                      "fontWeight": "600",
                    }
                  }
                >
                  MockScreen
                </Text>
              </View>
              <View
                pointerEvents="box-none"
                style={
                  Object {
                    "alignItems": "flex-end",
                    "flexBasis": 0,
                    "flexGrow": 1,
                    "justifyContent": "center",
                    "marginEnd": 0,
                    "opacity": 1,
                  }
                }
              />
            </View>
          </View>
        </View>
      </View>
      <RNSScreenContainer
        onLayout={[Function]}
        style={
          Object {
            "flex": 1,
          }
        }
      >
        <RNSScreen
          activityState={2}
          forwardedRef={[Function]}
          pointerEvents="box-none"
          style={
            Object {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        >
          <View
            collapsable={false}
            style={
              Object {
                "opacity": 1,
              }
            }
          />
          <View
            accessibilityElementsHidden={false}
            closing={false}
            gestureVelocityImpact={0.3}
            importantForAccessibility="auto"
            onClose={[Function]}
            onGestureBegin={[Function]}
            onGestureCanceled={[Function]}
            onGestureEnd={[Function]}
            onOpen={[Function]}
            onTransition={[Function]}
            pointerEvents="box-none"
            style={
              Array [
                Object {
                  "display": "flex",
                  "overflow": undefined,
                },
                Object {
                  "bottom": 0,
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                },
              ]
            }
            transitionSpec={
              Object {
                "close": Object {
                  "animation": "spring",
                  "config": Object {
                    "damping": 500,
                    "mass": 3,
                    "overshootClamping": true,
                    "restDisplacementThreshold": 10,
                    "restSpeedThreshold": 10,
                    "stiffness": 1000,
                  },
                },
                "open": Object {
                  "animation": "spring",
                  "config": Object {
                    "damping": 500,
                    "mass": 3,
                    "overshootClamping": true,
                    "restDisplacementThreshold": 10,
                    "restSpeedThreshold": 10,
                    "stiffness": 1000,
                  },
                },
              }
            }
          >
            <View
              collapsable={false}
              nativeID="animatedComponent"
              pointerEvents="box-none"
              style={
                Object {
                  "flex": 1,
                }
              }
            >
              <View
                collapsable={false}
                forwardedRef={[Function]}
                needsOffscreenAlphaCompositing={false}
                onGestureHandlerEvent={[Function]}
                onGestureHandlerStateChange={[Function]}
                style={
                  Object {
                    "flex": 1,
                    "transform": Array [
                      Object {
                        "translateX": 0,
                      },
                      Object {
                        "translateX": 0,
                      },
                    ],
                  }
                }
              >
                <View
                  style={
                    Array [
                      Object {
                        "flex": 1,
                        "overflow": "hidden",
                      },
                      Array [
                        Object {
                          "backgroundColor": "rgb(242, 242, 242)",
                        },
                        undefined,
                      ],
                    ]
                  }
                >
                  <View
                    style={
                      Object {
                        "flex": 1,
                        "flexDirection": "column-reverse",
                      }
                    }
                  >
                    <View
                      style={
                        Object {
                          "flex": 1,
                        }
                      }
                    >
                      <RCTScrollView
                        data={
                          Array [
                            Object {
                              "data": Array [
                                Object {
                                  "end": 1609542000,
                                  "eventType": "ELECTION",
                                  "id": "xdNMwtrRmq3r5a_pEPFV7k01dAYN2ihF6jkvST8v5o8=",
                                  "start": 1609455600,
                                },
                                Object {
                                  "end": 1609455600,
                                  "eventType": "MEETING",
                                  "id": "DUfBHDnXf0-9IRef_er_N_FRP6CE-N4Cls6QakkNiug=",
                                  "start": 1609455600,
                                },
                                Object {
                                  "end": 1620357600,
                                  "eventType": "ROLL_CALL",
                                  "id": "By0KY3p7Ppu7JCqyIy-_JTQWwS8uPB2yI4U9_NB7BPU=",
                                  "start": 1620255600,
                                },
                              ],
                              "title": "Past",
                            },
                            Object {
                              "data": Array [],
                              "title": "Present",
                            },
                            Object {
                              "data": Array [],
                              "title": "Future",
                            },
                          ]
                        }
                        getItem={[Function]}
                        getItemCount={[Function]}
                        keyExtractor={[Function]}
                        onContentSizeChange={[Function]}
                        onLayout={[Function]}
                        onMomentumScrollBegin={[Function]}
                        onMomentumScrollEnd={[Function]}
                        onScroll={[Function]}
                        onScrollBeginDrag={[Function]}
                        onScrollEndDrag={[Function]}
                        renderItem={[Function]}
                        scrollEventThrottle={50}
                        stickyHeaderIndices={
                          Array [
                            0,
                            5,
                            7,
                          ]
                        }
                      >
                        <View>
                          <View
                            onLayout={[Function]}
                            style={null}
                          >
                            <Text
                              style={
                                Object {
                                  "color": "black",
                                  "fontSize": 25,
                                  "fontWeight": "bold",
                                  "marginHorizontal": 10,
                                  "textAlign": "center",
                                }
                              }
                            >
                              Past
                            </Text>
                          </View>
                          <View
                            onLayout={[Function]}
                            style={null}
                          >
                            <View
                              style={
                                Array [
                                  Object {
                                    "borderRadius": 5,
                                    "borderWidth": 1,
                                    "marginBottom": 10,
                                    "marginHorizontal": 20,
                                    "paddingHorizontal": 10,
                                  },
                                  Object {
                                    "marginTop": 20,
                                  },
                                ]
                              }
                            >
                              <View>
                                <Text
                                  style={
                                    Object {
                                      "marginHorizontal": 10,
                                    }
                                  }
                                >
                                  Start: 
                                  <time
                                    dateTime="2020-12-31T23:00:00.000Z"
                                    title="2020-12-31 23:00"
                                  >
                                    1 year ago
                                  </time>
                                  

                                  End: 
                                  <time
                                    dateTime="2021-01-01T23:00:00.000Z"
                                    title="2021-01-01 23:00"
                                  >
                                    1 year ago
                                  </time>
                                </Text>
                              </View>
                              <View
                                data={
                                  Array [
                                    Object {
                                      "data": Array [
                                        "Ballot Option 1",
                                        "Ballot Option 2",
                                      ],
                                      "title": "Mock Question 1",
                                    },
                                    Object {
                                      "data": Array [
                                        "Ballot Option 1",
                                        "Ballot Option 2",
                                      ],
                                      "title": "Mock Question 2",
                                    },
                                  ]
                                }
                                getItem={[Function]}
                                getItemCount={[Function]}
                                keyExtractor={[Function]}
                                onContentSizeChange={[Function]}
                                onLayout={[Function]}
                                onMomentumScrollBegin={[Function]}
                                onMomentumScrollEnd={[Function]}
                                onScroll={[Function]}
                                onScrollBeginDrag={[Function]}
                                onScrollEndDrag={[Function]}
                                renderItem={[Function]}
                                scrollEventThrottle={50}
                                stickyHeaderIndices={
                                  Array [
                                    0,
                                    4,
                                  ]
                                }
                              >
                                <View
                                  onLayout={[Function]}
                                  style={null}
                                >
                                  <Text
                                    style={
                                      Object {
                                        "fontSize": 20,
                                        "marginHorizontal": 10,
                                        "textAlign": "center",
                                      }
                                    }
                                  >
                                    Mock Question 1
                                  </Text>
                                </View>
                                <View
                                  onLayout={[Function]}
                                  style={null}
                                >
                                  <Text
                                    style={
                                      Object {
                                        "fontSize": 16,
                                        "marginHorizontal": 20,
                                        "textAlign": "center",
                                      }
                                    }
                                  >
                                    • Ballot Option 1
                                  </Text>
                                </View>
                                <View
                                  onLayout={[Function]}
                                  style={null}
                                >
                                  <Text
                                    style={
                                      Object {
                                        "fontSize": 16,
                                        "marginHorizontal": 20,
                                        "textAlign": "center",
                                      }
                                    }
                                  >
                                    • Ballot Option 2
                                  </Text>
                                </View>
                                <View
                                  onLayout={[Function]}
                                  style={null}
                                />
                                <View
                                  onLayout={[Function]}
                                  style={null}
                                >
                                  <Text
                                    style={
                                      Object {
                                        "fontSize": 20,
                                        "marginHorizontal": 10,
                                        "textAlign": "center",
                                      }
                                    }
                                  >
                                    Mock Question 2
                                  </Text>
                                </View>
                                <View
                                  onLayout={[Function]}
                                  style={null}
                                >
                                  <Text
                                    style={
                                      Object {
                                        "fontSize": 16,
                                        "marginHorizontal": 20,
                                        "textAlign": "center",
                                      }
                                    }
                                  >
                                    • Ballot Option 1
                                  </Text>
                                </View>
                                <View
                                  onLayout={[Function]}
                                  style={null}
                                >
                                  <Text
                                    style={
                                      Object {
                                        "fontSize": 16,
                                        "marginHorizontal": 20,
                                        "textAlign": "center",
                                      }
                                    }
                                  >
                                    • Ballot Option 2
                                  </Text>
                                </View>
                                <View
                                  onLayout={[Function]}
                                  style={null}
                                />
                              </View>
                              <View
                                style={
                                  Object {
                                    "marginHorizontal": 50,
                                    "marginVertical": 10,
                                  }
                                }
                              >
                                <View
                                  accessibilityRole="button"
                                  accessibilityState={
                                    Object {
                                      "disabled": false,
                                    }
                                  }
                                  accessible={true}
                                  collapsable={false}
                                  focusable={true}
                                  nativeID="animatedComponent"
                                  onClick={[Function]}
                                  onResponderGrant={[Function]}
                                  onResponderMove={[Function]}
                                  onResponderRelease={[Function]}
                                  onResponderTerminate={[Function]}
                                  onResponderTerminationRequest={[Function]}
                                  onStartShouldSetResponder={[Function]}
                                  style={
                                    Object {
                                      "opacity": 1,
                                    }
                                  }
                                >
                                  <View
                                    style={
                                      Array [
                                        Object {},
                                      ]
                                    }
                                  >
                                    <Text
                                      disabled={false}
                                      style={
                                        Array [
                                          Object {
                                            "color": "#007AFF",
                                            "fontSize": 18,
                                            "margin": 8,
                                            "textAlign": "center",
                                          },
                                        ]
                                      }
                                    >
                                      Open election
                                    </Text>
                                  </View>
                                </View>
                              </View>
                            </View>
                          </View>
                          <View
                            onLayout={[Function]}
                            style={null}
                          >
                            <View
                              style={
                                Array [
                                  Object {
                                    "borderRadius": 5,
                                    "borderWidth": 1,
                                    "marginBottom": 10,
                                    "marginHorizontal": 20,
                                    "paddingHorizontal": 10,
                                  },
                                  Object {
                                    "marginTop": 20,
                                  },
                                ]
                              }
                            >
                              <View>
                                <Text
                                  style={
                                    Object {
                                      "marginHorizontal": 10,
                                    }
                                  }
                                >
                                  Start: 
                                  <time
                                    dateTime="2020-12-31T23:00:00.000Z"
                                    title="2020-12-31 23:00"
                                  >
                                    1 year ago
                                  </time>
                                </Text>
                              </View>
                              <View>
                                <Text
                                  style={
                                    Object {
                                      "marginHorizontal": 10,
                                    }
                                  }
                                >
                                  End: 
                                  <time
                                    dateTime="2020-12-31T23:00:00.000Z"
                                    title="2020-12-31 23:00"
                                  >
                                    1 year ago
                                  </time>
                                </Text>
                              </View>
                              <Text
                                style={
                                  Object {
                                    "marginHorizontal": 10,
                                  }
                                }
                              >
                                on earth
                              </Text>
                            </View>
                          </View>
                          <View
                            onLayout={[Function]}
                            style={null}
                          >
                            <View
                              style={
                                Array [
                                  Object {
                                    "borderRadius": 5,
                                    "borderWidth": 1,
                                    "marginBottom": 10,
                                    "marginHorizontal": 20,
                                    "paddingHorizontal": 10,
                                  },
                                  Object {
                                    "marginTop": 20,
                                  },
                                ]
                              }
                            >
                              <Text>
                                Roll Call
                              </Text>
                              <Text>
                                Not Open yet
                              </Text>
                              <Text>
                                Be sure to have set up your Wallet
                              </Text>
                              <View
                                style={
                                  Object {
                                    "marginHorizontal": 50,
                                    "marginVertical": 10,
                                  }
                                }
                              >
                                <View
                                  accessibilityRole="button"
                                  accessibilityState={
                                    Object {
                                      "disabled": false,
                                    }
                                  }
                                  accessible={true}
                                  collapsable={false}
                                  focusable={true}
                                  nativeID="animatedComponent"
                                  onClick={[Function]}
                                  onResponderGrant={[Function]}
                                  onResponderMove={[Function]}
                                  onResponderRelease={[Function]}
                                  onResponderTerminate={[Function]}
                                  onResponderTerminationRequest={[Function]}
                                  onStartShouldSetResponder={[Function]}
                                  style={
                                    Object {
                                      "opacity": 1,
                                    }
                                  }
                                >
                                  <View
                                    style={
                                      Array [
                                        Object {},
                                      ]
                                    }
                                  >
                                    <Text
                                      disabled={false}
                                      style={
                                        Array [
                                          Object {
                                            "color": "#007AFF",
                                            "fontSize": 18,
                                            "margin": 8,
                                            "textAlign": "center",
                                          },
                                        ]
                                      }
                                    >
                                      Open Roll-Call
                                    </Text>
                                  </View>
                                </View>
                              </View>
                            </View>
                          </View>
                          <View
                            onLayout={[Function]}
                            style={null}
                          />
                          <View
                            onLayout={[Function]}
                            style={null}
                          >
                            <Text
                              style={
                                Object {
                                  "color": "black",
                                  "fontSize": 25,
                                  "fontWeight": "bold",
                                  "marginHorizontal": 10,
                                  "textAlign": "center",
                                }
                              }
                            >
                              Present
                            </Text>
                          </View>
                          <View
                            onLayout={[Function]}
                            style={null}
                          />
                          <View
                            onLayout={[Function]}
                            style={null}
                          >
                            <View
                              style={
                                Object {
                                  "flex": 1,
                                  "flexDirection": "row",
                                  "justifyContent": "space-between",
                                }
                              }
                            >
                              <Text
                                style={
                                  Object {
                                    "fontSize": 25,
                                    "marginHorizontal": 10,
                                    "opacity": 0,
                                    "paddingLeft": 30,
                                    "textAlign": "center",
                                  }
                                }
                              >
                                +
                              </Text>
                              <Text
                                style={
                                  Object {
                                    "color": "black",
                                    "fontSize": 25,
                                    "fontWeight": "bold",
                                    "marginHorizontal": 10,
                                    "textAlign": "center",
                                  }
                                }
                              >
                                Future
                              </Text>
                              <Text
                                onPress={[Function]}
                                style={
                                  Object {
                                    "fontSize": 25,
                                    "marginHorizontal": 10,
                                    "paddingRight": 30,
                                    "textAlign": "center",
                                  }
                                }
                              >
                                +
                              </Text>
                            </View>
                          </View>
                          <View
                            onLayout={[Function]}
                            style={null}
                          />
                        </View>
                      </RCTScrollView>
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </RNSScreen>
      </RNSScreenContainer>
    </View>
  </RNCSafeAreaProvider>
</View>
`;
